# mreit-monitor

./: .env.example  .gitignore  CLAUDE.md  README.md  check_dec_2025.py  check_failed.py  check_missing_extractions.py  check_status.py  delete_ir_junk.py  fix_april_period_end.py  fix_dec2025_period_end.py  fix_doc_dates.py  fix_march_and_junk.py  ingest_arr_ir.py  ingest_ir_all.py  list_ir_urls.py  pyproject.toml  railway.toml  regen_summaries.py  reit-monitor-integration-steps.md  run_pending.py  serve.py  tmp_check.py  update_ir_sources.py  verify_arr_coverage.py
docs/: DATA_SOURCES.md  DEPLOYMENT.md  SCHEMAS.md  adding-new-reit.md  company-reporting-analysis.md  multi-company-claude-code-prompt.md
scripts/: backfill_armour.py  backfill_quarterly.py  fetch_arr_pdfs.py  generate_q4_reports.py  process_sec_filing.py  run_all_companies.py  run_remaining.py  seed_companies.py  test_extraction.py  test_universal_extraction.py
src/: main.py
src/agents/: comparison_agent.py  extraction_agent.py  model_router.py  summary_agent.py  universal_extractor.py
src/agents/prompts/: extraction_prompts.py  summary_templates.py  templates.py
src/api/: dependencies.py  frontend_routes.py  review_app.py  routes.py
src/config/: companies.py  company_registry.py  filing_calendar.py  settings.py  source_loader.py
src/models/: database.py  enums.py  schemas.py  summary_schemas.py  universal_schemas.py
src/parsers/: earnings_release.py  monthly_update.py  quarterly_filing.py  universal_document_processor.py  utils.py
src/services/: downloader.py  edgar.py  email_service.py  metering.py  scheduler.py  scraper.py  summary_service.py  summary_trigger.py  supabase_client.py  universal_scraper.py
supabase/migrations/: 001_initial_schema.sql  002_summary_reports.sql  003_multi_company.sql  004_add_filing_types.sql  005_extraction_comparisons.sql
tests/: test_monthly_helpers.py  test_schemas.py  test_scraper.py
