[project]
name = "mreit-monitor"
version = "0.1.0"
description = "Automated mREIT financial filing monitor, extractor, and analyzer"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # MCP endpoint (exposes FastAPI routes as MCP tools for Tom Bot)
    "fastapi-mcp>=0.3.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # HTTP client
    "httpx>=0.27.0",
    # HTML parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # PDF parsing (for 10-Q/10-K section extraction)
    "pdfplumber>=0.11.0",
    # LLM (OpenRouter-compatible — replaces anthropic/openai/google-genai direct SDKs)
    "openai>=1.50.0",
    # Supabase
    "supabase>=2.10.0",
    # Email
    "resend>=2.0.0",
    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Form handling
    "python-multipart>=0.0.9",
    # Utilities
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
    "docling>=2.94.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
